[tool.poetry]
name = "purepress"
version = "1.0.0"
description = "A simple static blog generator."
license = "MIT"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
readme = "README.md"
repository = "https://github.com/verilab/purepress"
keywords = ["Static Blog Generator", "Static Blog", "Blog", "Blog Engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
purepress = "purepress.__main__:cli.main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.0.3"
werkzeug = "^3.0.3"
pyyaml = "^6.0.1"
click = "^8.1.7"
colorama = "^0.4.6"
feedgen = "^1.0.0"
pytz = "^2024.1"
markdown = "^3.6"
py-gfm = "^2.0.0"
toml = "^0.10.2"
html-toc = "^0.1.2"
markupsafe = "^2.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["plugins"]
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
line-length = 120
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
